MZ updated my resources directory

--- a/Resources/UsefulLibraries.Rmd
+++ b/Resources/UsefulLibraries.Rmd
@@ -13,8 +13,10 @@ It gives a nice TODO makrdown documen
 2. check.packeges
 Nice code how to check if packages are there, if not install them
 [link](https://gist.github.com/smithdanielle/9913897)  
-# check.packages function: install and load multiple R packages.  
-# Check to see if packages are installed. Install them if they are not, then load them into the R session.  
+ check.packages function: install and load multiple R packages.  
+ Check to see if packages are installed. Install them if they are not, then load them into the R session.  
+
+```{}
 check.packages <- function(pkg){
     new.pkg <- pkg[!(pkg %in% installed.packages()[, "Package"])]
     if (length(new.pkg)) 
@@ -25,3 +27,12 @@ check.packages <- function(pkg){
 # Usage example
 packages<-c("ggplot2", "afex", "ez", "Hmisc", "pander", "plyr")
 check.packages(packages)
+```
+3. visdat
+Makes a nice plot of the data frame, type of data in it, and if there are any missing values
+[link](https://cran.r-project.org/web/packages/visdat/vignettes/using_visdat.html)
+
+4. assertr
+The package includes functions designed to verify assumptions about data. Example: That the age is not negative! or that rows are unique  
+[examle](https://daranzolin.github.io/2018-01-19-preeda/)  
+[link](https://cran.r-project.org/web/packages/assertr/vignettes/assertr.html)  
