adding skimr package to UsefulLibraries

--- a/Resources/UsefulLibraries.Rmd
+++ b/Resources/UsefulLibraries.Rmd
@@ -34,5 +34,9 @@ Makes a nice plot of the data frame, type of data in it, and if there are any mi
 
 4. assertr
 The package includes functions designed to verify assumptions about data. Example: That the age is not negative! or that rows are unique  
-[examle](https://daranzolin.github.io/2018-01-19-preeda/)  
+[example](https://daranzolin.github.io/2018-01-19-preeda/)  
 [link](https://cran.r-project.org/web/packages/assertr/vignettes/assertr.html)  
+
+5. skimr 
+a frictionless approach to summary statistics that displays summary statistics the user can skim quickly to understand their data
+[link](https://ropensci.org/blog/2017/07/11/skimr/)
